Bump for PiCrate-2.0